# TileDB-Cloud-JS

./: .eslintignore  .eslintrc.cjs  .gitignore  .npmignore  .prettierignore  README.md  azure-pipelines.yaml  babel.config.js  eslint.config.js  jest.config.js  openapitools.json  package-lock.json  package.json  prettier.config.ts  rollup.config.js  setup.js  tsconfig.build.json  tsconfig.esbuild.json  tsconfig.jest.json  tsconfig.json  update_generated.sh  vite.config.js  vitest.config.ts  webpack.config.js
api/: index.ts  package-lock.json  package.json  tsconfig.json
capnp/: arrayMetadata.capnp
examples/: array_metadata.js  body.raw  data.js  query.js  query_read.js  query_writes.js
fixtures/: axes  axes.cc  body.raw  body_a0_a1.raw  body_all.raw  body_axes.raw  body_char2.raw  body_dense_write_subarray.raw  body_dt.raw  body_fixed_new.raw  body_genomics.raw  body_mixed.raw  body_mixed_overlapped_range.raw  body_mixed_range.raw  body_multi_attr.raw  body_null_attr.raw  body_nullable_single_attr_write_2.raw  body_real.raw  body_sparse_string.raw  body_sparse_string64.raw  body_sparse_string64_all.raw  body_write_sparse_string.raw  body_writer.raw  body_writer_sparse_nullable.raw  get_non_empty_domain.py  multi_attr  multi_attr.cc  nullable_attr  nullable_attr.cc  nullable_char  nullable_char2  nullable_signel_attr.cc  nullable_single  q_sparse  q_sparse.cc  qsparse  qstart_fixed.cc  qstart_fixed_all  qstart_sparse_fixed  qstart_sparse_str  (+35 more)
lib/: ApiClient.js  api.d.ts  api.js  (+20 more)
wasm-slicer/: .gitignore  Cargo.toml  README.md
wasm-slicer/src/: build.rs  lib.rs
(+837 files in other folders)
