[package]
name = "wasm-slicer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
rayon = "1.5"
wasm-bindgen-rayon = "1.0"
wasm-bindgen-futures = "0.4"
once_cell = "1.19.0"